--- a/2020/octobre/1.md
+++ b/2020/octobre/1.md
@@ -1,2 +1,2 @@
-Ctrl-L pour mettre en mode présentation Adobe reader.
-On peut installer des plugins à Notepad++ 
+* Ctrl-L pour mettre en mode présentation Adobe reader.
+* On peut installer des plugins à Notepad++ 
